--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ table, th, td {border:3px solid black;}
 		<td>Title</td>
 		<td>director</td>
 		<td>date relased</td>
+		<td>synopsis</td>
 		<td>Payment cost</td>
 	</tr>
 	<tr>
